--- a/angular/src/app/popup-notification/popup-notification.component.css
+++ b/angular/src/app/popup-notification/popup-notification.component.css
@@ -120,3 +120,7 @@ ul {
     --tw-text-opacity: 1;
     color: rgb(156 163 175/var(--tw-text-opacity));
 }
+.content-notification{
+    overflow: auto;
+    width: 90%;
+}
