--- a/angular/src/app/popup-form/popup-form.component.html
+++ b/angular/src/app/popup-form/popup-form.component.html
@@ -27,9 +27,12 @@
       </div>
       <div *ngIf="isAll" class="mb-3 col-6">
         <app-input #startTime  [typeInput]="'time'" [content]="leave.startTime" title="START TIME">Start time</app-input>
+        <!-- <app-input-time #startTime [content]="leave.startTime" title="START TIME"></app-input-time> -->
       </div>
       <div *ngIf="isAll" class="mb-3 col-6">
         <app-input #endTime [typeInput]="'time'" [content]="leave.endTime" title="END TIME">End time</app-input>
+        <!-- <app-input-time #endTime [content]="leave.endTime" title="END TIME"></app-input-time> -->
+
 
       </div>
       <div class="mb-3 d-flex flex-column">
