--- a/angular/src/app/popup-notification/popup-notification.component.html
+++ b/angular/src/app/popup-notification/popup-notification.component.html
@@ -5,7 +5,7 @@
             <div class="text-white"><i class="bi bi-bell-fill me-3 fs-5"></i>Notification</div>
             <i (click)="ClosePopup()" class="bi bi-x text-white fs-5"></i>
         </div>
-        <div class="text-black">
+        <div class="text-black content-notification">
             <ul class="mx-4 mt-3 p-0">
                 <ng-container *ngFor="let notification of notifications">
                     <li class="d-flex  m-0 p-0 mb-2">
