--- a/angular/src/app/table-item-roster/table-item-roster.component.html
+++ b/angular/src/app/table-item-roster/table-item-roster.component.html
@@ -22,10 +22,10 @@
                     <span class="border-radius-3 px-1 bgr-color-white margin-left">{{roster.toTime.format("hh:mm")}}</span>
                 </div>
                 <div class="flex item-center margin-x-y">
-                    <i class="bi bi-briefcase-fill"></i>
+                    <i class="bi bi-briefcase-fill me-2"></i>
                     <span>{{roster.type}}</span>
                 </div>
-            </div>  
+            </div>
         </div>
     </div>
 </div>
