--- a/angular/src/app/popup-form/popup-form.component.html
+++ b/angular/src/app/popup-form/popup-form.component.html
@@ -26,11 +26,11 @@
         <label class="" for="all">All Day</label>
       </div>
       <div *ngIf="isAll" class="mb-3 col-6">
-        <app-input #timeExample  [typeInput]="'time'" [content]="timeExample" title="START TIME">Start time</app-input>
+        <app-input #timeStartExample  [typeInput]="'time'" [content]="timeStartExample" title="START TIME">Start time</app-input>
         <!-- <app-input-time #startTime [content]="leave.startTime" title="START TIME"></app-input-time> -->
       </div>
       <div *ngIf="isAll" class="mb-3 col-6">
-        <app-input #endTime [typeInput]="'time'" [content]="leave.endTime" title="END TIME">End time</app-input>
+        <app-input #timeEndExample [typeInput]="'time'" [content]="timeEndExample" title="END TIME">End time</app-input>
         <!-- <app-input-time #endTime [content]="leave.endTime" title="END TIME"></app-input-time> -->
 
 
