--- a/angular/src/app/table-leave/table-leave.component.css
+++ b/angular/src/app/table-leave/table-leave.component.css
@@ -1,3 +1,11 @@
+.content-ag{
+  margin-left: 10%;
+  margin-right: 10%;
+
+  /* padding-right: 5rem; */
+
+}
+
 .align-super {
     height: 80px;
     width: 12px;
