--- a/angular/src/app/table-leave/table-leave.component.css
+++ b/angular/src/app/table-leave/table-leave.component.css
@@ -1,6 +1,6 @@
 .content-ag{
-  margin-left: 10%;
-  margin-right: 10%;
+  /* margin-left: 5%; */
+  /* margin-right: 5%; */
 
   /* padding-right: 5rem; */
 
