--- a/angular/src/app/header-custom/header-custom.component.html
+++ b/angular/src/app/header-custom/header-custom.component.html
@@ -1,10 +1,13 @@
 <header class="w-2 text-white d-flex justify-content-between mx-auto ">
     <!-- <img src="../app/img/optimize_featured-image.png"> -->
-    <div class="image-header pt-3 ms-5">
+    <div class="image-header pt-3 ms-5 content-logo">
         <img
             src="https://optimize-portal.vercel.app/_next/image?url=%2F_next%2Fstatic%2Fmedia%2Flogo.71ef5d46.png&w=256&q=75">
     </div>
-    <ul class="d-flex justify-content-start mt-2">
+    <app-navbar-custom [isOpenNav]="isOpenNav"></app-navbar-custom>
+    <!-- <app-navbar-custom *ngIf="isOpenNav" []></app-navbar-custom> -->
+
+    <!-- <ul class="d-flex justify-content-start mt-2 content-link">
         <li class="pt-2 mx-3">
             <a routerLinkActive="active" routerLink="profile" routerLinkActive="active"
                 [routerLinkActiveOptions]="{exact:true}" class="text-white ">
@@ -28,17 +31,17 @@
                     value="Shift Offers">
             </a>
         </li>
-    </ul>
-    <div class=" pt-1 d-flex justify-content-end me-5 ">
+    </ul> -->
+    <div class=" pt-1 d-flex justify-content-end  conten-avatar">
         <button class="btn-bell border-0 mx-2 " (click)="OpenNotification()">
             <i class="bi bi-bell-fill fs-4">
                 <div class="align-super rounded-circle border-0 me-2" style="width: 0.5rem; height:0.5rem;"></div>
             </i></button>
-        <div class="mx-3 text-center mt-2">
+        <div class="mx-3 text-center mt-2 content-name">
             <div>{{this.user.name}}</div>
             <div>{{this.user.surname}}</div>
         </div>
-        <div (clickOutside)='onClickedOutside($event)'>
+        <div (clickOutside)='onClickedOutside($event)' class="item-avatar">
             <app-avatar [isNavbar]="true" [user]="this.user" (OpenLogoutEvent)="onLogout($event)"></app-avatar>
             <!-- <button (click)="onLogout()" class="col-1  rounded-circle btn-name text-white"
                 style="width: 3rem; height:3rem;">DL</button> -->
@@ -46,6 +49,9 @@
                 class=" position-absolute end-0  p-2 btn_logout mt-5 border border-white rounded-2 shadow  ">
                 <i class="bi bi-box-arrow-right me-2"></i>Log out
             </button>
+        </div>
+        <div class="pt-2 icon-nav" (click)="OpenNavbar()">
+            <i class="bi bi-list fs-3 mx-4 pt-4"></i>
         </div>
     </div>
 </header>
