--- a/angular/src/app/profile/profile.component.css
+++ b/angular/src/app/profile/profile.component.css
@@ -9,6 +9,11 @@
     display: flex;
 }
 
+.mx-8{
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
+
 .div-circle{
     background-color: rgb(149, 114, 207);
     width: 140px;
@@ -76,7 +81,7 @@
 }
 
 .div-form {
-    margin-left: 50px;
+    margin-right: 40px;
     width: 700px;
 }
 
@@ -333,4 +338,27 @@ ul{
 
 .border-color{
     border-color: rgb(107 114 128/.2);
+}
+
+.max-w-4xl {
+    max-width: 56rem;
+}
+
+@media (min-width: 1024px){
+    .lg\:mx-auto {
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media (min-width: 750px){
+    .md\:flex-row {
+        flex-direction: row;
+    }
+
+    .md\:space-x-12>:not([hidden])~:not([hidden]) {
+        --tw-space-x-reverse: 0;
+        margin-right: calc(3rem * var(--tw-space-x-reverse));
+        margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
+    }
 }
