--- a/angular/src/app/table-week/table-week.component.html
+++ b/angular/src/app/table-week/table-week.component.html
@@ -1,4 +1,4 @@
-<ul class="d-flex border boder-black rounded-3 p-0">
+<ul class="lg:flex lg:rounded-lg border boder-black rounded-3 p-0 list-style-none">
     <li *ngFor="let day of infoUpdate" class="flex-fill border-1 border-start">
         <div class="head-day ps-3 py-2 ">{{this.day[0]}}</div>
         <div *ngIf="this.changeCalendar == 1">
