--- a/angular/src/app/calendar/calendar.component.html
+++ b/angular/src/app/calendar/calendar.component.html
@@ -1,34 +1,40 @@
-<div class="option d-flex">
-  <div class="option-button d-flex">
-    <div class="flex items-center space-x-8 rounded-2xl border px-4 py-1" id="roster" (click)="RosterButton()"
-      [ngStyle]="{'background-color': checkRoster ? '#1ABAC5':'white'}">
-      <a type="button" class="option" [ngStyle]="{'color': checkRoster  ? 'white':'black' }">Roster</a>
-    </div>
-    <div class="flex items-center space-x-8 rounded-2xl border px-4 py-1" id="availability" (click)="AvaiButton()"
-      [ngStyle]="{'background-color': checkAvai ? '#1ABAC5':'white'}">
-      <a type="button" class="option" [ngStyle]="{'color': checkAvai  ? 'white':'black' }">Availability</a>
-    </div>
-    <div class="flex items-center space-x-8 rounded-2xl border px-4 py-1" id="leave" (click)="LeaveButton()"
-      [ngStyle]="{'background-color': checkLeave ? '#1ABAC5':'white' }">
-      <a type="button" class="option" [ngStyle]="{'color': checkLeave  ? 'white':'black' }">Leave</a>
-    </div>
-  </div>
-  <div *ngIf="this.changeCalendar != 3">
-    <app-button-week (truyenchobo)="buttonWeek($event)"> </app-button-week>
-  </div>
-  <div *ngIf="this.changeCalendar == 3">
-    <div class="option-option-button">
-      <div class="flex items-center space-x-8 rounded-2xl border px-4 py-1" id="week"
-        [ngStyle]="{'background-color': '#1ABAC5','outline': '2px solid transparent','outline-offset': '2px'}">
-        <a class="option" type="button" [ngStyle]="{'color': 'white'}" (click)=" OpenNotification()"> Request Leave </a>
+<div class="mx-auto mt-10 max-w-7xl sm:px-8">
+  <div class="mx-4 flex flex-col space-y-4 sm:mx-0 sm:flex-row sm:items-center sm:space-y-0">
+    <div class="flex-1">
+      <div class=" d-flex">
+        <div class="flex flex-1 sm:flex-1 items-center space-x-8 rounded-2xl border px-4 py-1" id="roster" (click)="RosterButton()"
+          [ngStyle]="{'background-color': checkRoster ? '#1ABAC5':'white'}">
+          <a type="button" class="option" [ngStyle]="{'color': checkRoster  ? 'white':'black' }">Roster</a>
+        </div>
+        <div class="flex flex-1 sm:flex-1 items-center space-x-8 rounded-2xl border px-4 py-1" id="availability" (click)="AvaiButton()"
+          [ngStyle]="{'background-color': checkAvai ? '#1ABAC5':'white'}">
+          <a type="button" class="option" [ngStyle]="{'color': checkAvai  ? 'white':'black' }">Availability</a>
+        </div>
+        <div class="flex flex-1 sm:flex-1 items-center space-x-8 rounded-2xl border px-4 py-1" id="leave" (click)="LeaveButton()"
+          [ngStyle]="{'background-color': checkLeave ? '#1ABAC5':'white' }">
+          <a type="button" class="option" [ngStyle]="{'color': checkLeave  ? 'white':'black' }">Leave</a>
+        </div>
       </div>
     </div>
-
-
+    
+    <div class="flex-1 sm:flex-none" *ngIf="this.changeCalendar != 3">
+      <app-button-week (truyenchobo)="buttonWeek($event)"> </app-button-week>
+    </div>
+    <div *ngIf="this.changeCalendar == 3">
+      <div class="option-option-button">
+        <div class="flex items-center space-x-8 rounded-2xl border px-4 py-1" id="week"
+          [ngStyle]="{'background-color': '#1ABAC5','outline': '2px solid transparent','outline-offset': '2px'}">
+          <a class="option" type="button" [ngStyle]="{'color': 'white'}" (click)=" OpenNotification()"> Request Leave </a>
+        </div>
+      </div>
+  
+  
+    </div>
   </div>
+  
 </div>
 
-<div class="mt-4" *ngIf="this.changeCalendar != 3">
+<div class="mt-4 sm:px-8 max-w-7xl" *ngIf="this.changeCalendar != 3">
   <app-table-week [infoUpdate]="messager" [changeCalendar]="changeCalendar" [rosters]="rosters"></app-table-week>
 </div>
 <div *ngIf="this.changeCalendar == 3">
