--- a/angular/src/app/shift-offer/shift-offer.component.html
+++ b/angular/src/app/shift-offer/shift-offer.component.html
@@ -1,10 +1,13 @@
-<div class="option d-flex">
-  <div class="option-button d-flex">
-  </div>
-  <div>
-    <app-button-week (truyenchobo)="buttonWeek($event)"></app-button-week>
-  </div>
+<div class="option d-flex mx-4 mx-auto max-w-7xl sm:px-8">
+  <div class="flex flex-1">
+    <div class="option-button  sm:flex sm:flex-1">
+    </div>
+    <div class="flex-1 sm:flex-none">
+      <app-button-week (truyenchobo)="buttonWeek($event)"></app-button-week>
+    </div>
+  </div>  
 </div>
-<div class="mt-4" >
+
+<div class="mt-4 sm:px-8 max-w-7xl" >
   <app-table-week [shiftOffer]="shiftOffer" [infoUpdate] = "messages" [changeCalendar] = "3"></app-table-week>
 </div>
