--- a/angular/src/app/table-week/table-week.component.css
+++ b/angular/src/app/table-week/table-week.component.css
@@ -6,3 +6,19 @@
 ul.d-flex.border.boder-black.rounded-3.p-0 {
     list-style: none;
 }
+
+ul.lg\:flex.lg\:rounded-lg.border.boder-black.rounded-3.p-0 {
+    list-style: none;
+}
+
+@media (min-width: 1024px){
+    .lg\:rounded-lg {
+        border-radius: .5rem;
+    }
+}
+
+@media (min-width: 1024px){
+    .lg\:flex {
+        display: flex;
+    }
+}
