--- a/angular/src/app/popup-notification/popup-notification.component.css
+++ b/angular/src/app/popup-notification/popup-notification.component.css
@@ -1,6 +1,7 @@
 ul {
     list-style: none;
 }
+
 .btn-bell {
     color: white;
     background-color: #31303A;
@@ -19,6 +20,7 @@ ul {
     max-width: 100%;
 
 }
+
 .popup-close {
     display: block;
     position: fixed;
@@ -59,7 +61,7 @@ ul {
 
 @keyframes content-bell-close {
     0% {
-        left: 71%;
+        left: 70%;
         width: 100%;
     }
 
@@ -70,10 +72,10 @@ ul {
 }
 
 
-.content{
+.content {
     background-color: #fefefe;
     position: fixed;
-    left: 71%;
+    right: 0%;
     z-index: 10;
     height: 100%;
     width: 447px;
@@ -83,11 +85,11 @@ ul {
 
 @keyframes content-bell-open {
     0% {
-        left: 100%;
+        right: -50%;
     }
 
     100% {
-        left: 71%;
+        right: 0%;
     }
 }
 
@@ -120,7 +122,8 @@ ul {
     --tw-text-opacity: 1;
     color: rgb(156 163 175/var(--tw-text-opacity));
 }
-.content-notification{
+
+.content-notification {
     overflow: auto;
     height: 90%;
 }
