--- a/angular/src/app/popup-notification/popup-notification.component.css
+++ b/angular/src/app/popup-notification/popup-notification.component.css
@@ -127,3 +127,8 @@ ul {
     overflow: auto;
     height: 90%;
 }
+@media only screen and (max-width:500px) {
+    .content{
+        width: 100%;
+    }
+}
