--- a/angular/src/app/table-leave/table-leave.component.css
+++ b/angular/src/app/table-leave/table-leave.component.css
@@ -87,3 +87,10 @@
     cursor: pointer;
   }
 
+  @media only screen and (max-width:800px) {
+    .table-leave{
+      margin: 0px !important;
+      padding: 0px !important;
+
+    }
+  }
