--- a/angular/src/app/table-leave/table-leave.component.html
+++ b/angular/src/app/table-leave/table-leave.component.html
@@ -1,5 +1,5 @@
 
-<div  class="mx-5 mt-4" style="height: 100%; display: flex; flex-direction: column;padding-right: 10%;padding-left: 10%">
+<div  class="mx-5 mt-4 table-leave" style="height: 100%; display: flex; flex-direction: column;padding-right: 9%;padding-left: 9%">
   <div [ngStyle]="style" class="content-ag">
     <ag-grid-angular  style="width: 100%; height: 500px;" class="ag-theme-alpine" [rowData]="rowData" [columnDefs]="colDefs"
       [defaultColDef]="defaultColDef" [rowSelection]="rowSelection" [suppressRowClickSelection]="true">
